# chip8_emulator

./: CMakeLists.txt  Chip8.cpp  README.md  main.cpp
include/: Chip8.h  fontset.h  keypad_map.h
source/: Chip8.cpp  main.cpp
